--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -190,8 +190,9 @@ jobs:
         wget "https://download.java.net/java/ga/jdk11/openjdk-11_osx-x64_bin.tar.gz" -O "build/jdk.tar.gz"
         sudo tar xvzf build/jdk.tar.gz -C /Library/Java/JavaVirtualMachines/
         export JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-11.jdk/Contents/Home/
-        brew install ant binutils pkg-config ffmpeg
-      displayName: 'Setup JDK Ant, Binutils and FFmpeg'
+        brew install ant binutils pkg-config ffmpeg gettext
+        brew link gettext
+      displayName: 'Setup JDK, Ant, Binutils, Pkg-config, FFmpeg and Gettext'
     - task: Gradle@2
       inputs:
         workingDirectory: ''
