--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ jobs:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
     - script: |
-        sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/*
+        sudo apt-get update && sudo apt-get install ant yasm nasm -y && sudo rm -rf /var/lib/apt/lists/*
         ./installFFmpeg.sh athena
       displayName: 'Install Ant and FFmpeg'
     - task: Gradle@2
@@ -191,7 +191,7 @@ jobs:
         wget "https://download.java.net/java/ga/jdk11/openjdk-11_osx-x64_bin.tar.gz" -O "build/jdk.tar.gz"
         sudo tar xvzf build/jdk.tar.gz -C /Library/Java/JavaVirtualMachines/
         export JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-11.jdk/Contents/Home/
-        brew install ant binutils pkg-config
+        brew install ant binutils pkg-config yasm nasm
         brew link gettext --force
         ./installFFmpeg.sh
       displayName: 'Setup JDK, Ant, Binutils, Pkg-config, FFmpeg and Gettext'
