--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,8 @@ resources:
   - container: bionic
     image: wpilib/aarch64-cross-ubuntu:bionic-18.04
 
+variables:
+- group: Artifactory-Package-Publish
 
 stages:
 - stage: Build
@@ -329,6 +331,7 @@ stages:
       inputs:
         artifactName: 'Athena'
         targetPath: 'build-tools/combiner/products/build/allOutputs'
+
     - task: Gradle@2
       inputs:
         workingDirectory: 'build-tools/combiner'
@@ -336,6 +339,20 @@ stages:
         gradleOptions: '-Xmx3072m'
         tasks: 'publish '
         options: '-Pthirdparty'
+      env:
+        ARTIFACTORY_PUBLISH_USERNAME: $(PublishUserName)
+        ARTIFACTORY_PUBLISH_PASSWORD: $(PublishPassword)
+
+    - task: Gradle@2
+      inputs:
+        workingDirectory: 'build-tools/combiner'
+        gradleWrapperFile: 'build-tools/combiner/gradlew'
+        gradleOptions: '-Xmx3072m'
+        tasks: 'publish '
+        options: '-Pthirdparty -PreleaseRepoPublish'
+      env:
+        ARTIFACTORY_PUBLISH_USERNAME: $(PublishUserName)
+        ARTIFACTORY_PUBLISH_PASSWORD: $(PublishPassword)
     - script: |
         echo "##vso[task.setvariable variable=UserHome]$HOME"
       displayName: 'Set Home Variable'
