--- a/build.gradle
+++ b/build.gradle
@@ -218,9 +218,7 @@ if (project.platform == "linux-athena") {
             }
 
             if (!project.platform.startsWith('windows')) {
-                args = args + '-DOPENCV_ENABLE_PKG_CONFIG=ON' +
-                    "-DFFMPEG_INCLUDE_DIR=$rootDir/ffmpeg/build/include/" +
-                    "-DFFMPEG_LIB_DIR=$rootDir/ffmpeg/build/lib/"
+                args = args + '-DOPENCV_ENABLE_PKG_CONFIG=ON'
             }
 
             if (hasProperty('toolchain')) {
