--- a/build.gradle
+++ b/build.gradle
@@ -204,7 +204,7 @@ if (project.platform == "linux-athena") {
         inputs.dir 'ffmpeg'
 
         def configureArgs = {
-            def args = ['--disable-programs', '--enable-avresample' "--prefix=${installDirectory.toString()}"]
+            def args = ['--disable-programs', '--enable-avresample', "--prefix=${installDirectory.toString()}"]
 
             if (buildType.contains("Shared")) {
                 args = args + '--enable-shared' + '--disable-static'
