--- a/build.gradle
+++ b/build.gradle
@@ -269,6 +269,12 @@ if (project.platform == "linux-athena") {
             dependsOn 'FFmpegMakeInstall' + buildType
             environment 'PKG_CONFIG_PATH', buildDirectory.resolve('ffmpeg').resolve('lib').resolve('pkgconfig').toString()
             environment 'PKG_CONFIG_LIBDIR', buildDirectory.resolve('ffmpeg').resolve('lib').toString()
+
+            if (project.platform.startsWith('osx')) {
+                environment 'DYLD_LIBRARY_PATH', "${System.env.DYLD_LIBRARY_PATH}:${buildDirectory.resolve('ffmpeg').resolve('lib').toString()}"
+            } else {
+                environment 'LD_LIBRARY_PATH', "${System.env.LD_LIBRARY_PATH}:${buildDirectory.resolve('ffmpeg').resolve('lib').toString()}"
+            }
         }
 
         inputs.dir 'opencv'
