--- a/build.gradle
+++ b/build.gradle
@@ -360,6 +360,14 @@ if (project.platform == "linux-athena") {
         workingDir buildDirectory.toString()
         def processors = Runtime.runtime.availableProcessors()
 
+        environment 'PKG_CONFIG_PATH', buildDirectory.resolve('ffmpeg').resolve('lib').resolve('pkgconfig').toString()
+        environment 'PKG_CONFIG_LIBDIR', buildDirectory.resolve('ffmpeg').resolve('lib').toString()
+
+        if (project.platform.startsWith('osx')) {
+            environment 'DYLD_LIBRARY_PATH', "${System.env.DYLD_LIBRARY_PATH}:${buildDirectory.resolve('ffmpeg').resolve('lib').toString()}"
+        } else {
+            environment 'LD_LIBRARY_PATH', "${System.env.LD_LIBRARY_PATH}:${buildDirectory.resolve('ffmpeg').resolve('lib').toString()}"
+        }
 
 
         if (project.platform.startsWith("windows")) {
